src/test/deca/context/valid/class/calls/field_assign2.deca
// Description:
//    Affectation d'un champ de type int dans un float
//
// Resultats:
//    cast correct
// 
// Historique:
//    cree le 01/01/2016

class A {
	int a;
}

{
	A a;
	float b = a.a;
}

