src/test/deca/context/invalid/class/calls/absent_class1.deca
// Description:
//    Appel d'un champ d'un objet de non classe
//
// Resultats:
//    undefined class

{
	int a;
	int c = a.b;
}

